improvements to the second class

--- a/2. Tabular data and classification/en.ipynb
+++ b/2. Tabular data and classification/en.ipynb
@@ -164,6 +164,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise 1\n",
+    "\n",
+    "Use internet to collect the following information about all EU countries, including: \n",
+    "* Name of the country\n",
+    "* Population\n",
+    "* Area (in square meters)\n",
+    "* Year they became a part of EU\n",
+    "* Do they use Euro (just \"yes\" or \"not\")\n",
+    "\n",
+    "Enter this information to Excel or other spreadsheet table software and save the table as a CSV file (coma separated). Then load dat from the CSV file to Python and show it on the screen.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## put your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Iris dataset\n",
     "\n",
     "The [Iris Flower](https://en.wikipedia.org/wiki/Iris_flower_data_set) is a well-known dataset that is frequently used for introductory purposes in data science and machine learning fields due to its simplicity and versatility. \n",
@@ -226,6 +251,16 @@
    "outputs": [],
    "source": [
     "d.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td = d.tail()\n",
+    "td.shape"
    ]
   },
   {
@@ -352,8 +387,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compare values of column \"Species\" with text \"setosa\" and select only rows of\n",
-    "# data frame d where this comparison is true\n",
+    "d[\"Species\"] == \"setosa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "setosa = d[d[\"Species\"] == \"setosa\"]\n",
     "setosa"
    ]
@@ -373,7 +415,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setosa2 = d[(d[\"Species\"] == \"setosa\") & (d[\"PetalWidth\"] > 0.2)]\n",
+    "(d[\"Species\"] == \"setosa\") & (d[\"PetalWidth\"] > 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setosa2 = d[(d[\"Species\"] == \"setosa\") & (d[\"PetalWidth\"] > 0.3)]\n",
     "setosa2"
    ]
   },
@@ -385,7 +436,26 @@
     "\n",
     "One, where we compare the values of column `\"Species\"` with `\"setosa\"`, and the second one, where we compare the values from column `\"PetalWidth\"` with value `0.2` using greater operator. Each comparison is located inside parentheses and there is an ampersand, `&`, in between. \n",
     "\n",
-    "This symbol is a synonym for \"and\". And hence this expression tells Pandas: *select rows where value for column \"Species\" is \"setosa\" **and** value for column \"PetalWidth\" is larger than 0.2*. And this is exactly what we got inside the new data frame, `setosa2`."
+    "This symbol is a synonym for \"and\". And hence this expression tells Pandas: *select rows where value for column \"Species\" is \"setosa\" **and** value for column \"PetalWidth\" is larger than 0.2*. And this is exactly what we got inside the new data frame, `setosa2`.\n",
+    "\n",
+    "\n",
+    "### Exercise 2\n",
+    "\n",
+    "Load data about EU countries from the CSV file you created earlier. Create and show the following subsets:\n",
+    "\n",
+    "* Countries which became part of EU after 2000.\n",
+    "* Countries which became part of EU after 2000 and do not use Euro.\n",
+    "* Countries which have area more than 200.000 sq. m.\n",
+    "* Countries which have a population density less than 50 people per sq. m.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## write your code here"
    ]
   },
   {
@@ -393,6 +463,9 @@
    "metadata": {},
    "source": [
     "### Visualisation of data values\n",
+    "\n",
+    ">*Note to teacher:* start with explaining how to make simple plots using manually entered data values. First as a list (e.g. height and weight of people), show scatter and bar plot using this example. Then show how to make scatter, line and bar plot for manually entered values of a parabola points. Then show how to generate this values using NumPy function `linspace()` and discuss pros and cons of NumPy arrays vs simple Python lists.\n",
+    "\n",
     "\n",
     "You can visualize data values using different plots. We will reuse library `matplotlib` for that. For example, the code below shows how large the  *Sepal Length* values are for different flowers using bar plot, so every flower is represented by a bar, and height of this bar corresponds to the sepal length of this flower. \n",
     "\n",
@@ -405,9 +478,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load plotting engine from matplotlib library and give it a short name \"plt\"\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# save values from column Species into a separate variable\n",
     "species = d[\"Species\"]\n",
     "\n",
@@ -415,6 +485,19 @@
     "se = d[species == \"setosa\"]\n",
     "ve = d[species == \"versicolor\"]\n",
     "vi = d[species == \"virginica\"]\n",
+    "\n",
+    "# show size\n",
+    "(d.shape, se.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load plotting engine from matplotlib library and give it a short name \"plt\"\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# make a plot figure of size 14 x 5\n",
     "plt.figure(figsize = (14, 5))\n",
@@ -432,7 +515,7 @@
     "# add labels\n",
     "plt.ylabel(\"Sepal length\")\n",
     "plt.xlabel(\"Flowers\")\n",
-    "plt.title(\"Iris dataset\")\n"
+    "plt.title(\"Iris dataset\")"
    ]
   },
   {
@@ -442,6 +525,28 @@
     "What if we want to make such a plot for each of the four measured variable? It will require a lot of copy-paste with many manual changes. Let's simplify this and make a dedicated function which shows a barplot for any column whose name is provided by a user.\n",
     "\n",
     "In this function we will also simplify the code written above by using loops:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get unique value from column species\n",
+    "species = d[\"Species\"]\n",
+    "species.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop over the unique values\n",
+    "for s in species.unique():\n",
+    "    print(s)"
    ]
   },
   {
@@ -511,21 +616,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get column names for specific columns\n",
     "colnames = d.columns[1:5]\n",
-    "\n",
-    "plt.figure(figsize=(20, 15))\n",
-    "for i in range(4):\n",
-    "    plt.subplot(2, 2, i + 1)\n",
-    "    iris_barplot(d, colnames[i])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Looks very good, but, what is most important, it shows us that Petal measurements (last two plots) can be used to separate flowers of different species. They clearly have different petal size. We will use this knowledge later to build a classification model. \n",
-    "\n",
-    "Meanwhile let's learn how to make another plot — scatter plot. Let's start with a long and verbose example, where we repeat part of the code already used above:"
+    "colnames"
    ]
   },
   {
@@ -534,17 +627,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save values from column Species into a separate variable\n",
-    "species = d[\"Species\"]\n",
+    "# make the barplots by using loop over the column names\n",
+    "plt.figure(figsize=(20, 15))\n",
+    "for i in range(4):\n",
+    "    plt.subplot(2, 2, i + 1)\n",
+    "    iris_barplot(d, colnames[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks very good, but, what is most important, it shows us that Petal measurements (last two plots) can be used to separate flowers of different species. They clearly have different petal size. We will use this knowledge later to build a classification model. \n",
     "\n",
-    "# create subsets\n",
-    "se = d[species == \"setosa\"]\n",
-    "ve = d[species == \"versicolor\"]\n",
-    "vi = d[species == \"virginica\"]\n",
-    "\n",
+    "Meanwhile let's learn how to make another plot — scatter plot. Let's start with a simple example to give an idea:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(d[\"PetalLength\"], d[\"PetalWidth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(d[\"PetalLength\"], d[\"PetalWidth\"], marker=\"s\", edgecolor=\"blue\", color=\"yellow\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here is a long and verbose example, where we reuse the subsets we already created above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# make a plot figure of size 10 x 10\n",
-    "plt.figure(figsize = (10, 10))\n",
-    "\n",
+    "plt.figure(figsize = (6, 6))\n",
     "\n",
     "# show scatter plot which takes values from two columns, Petal Width and Petal Length\n",
     "# and then every row is shown as a point. The x-coordinate of the point corresponds to its\n",
@@ -561,7 +692,7 @@
     "plt.legend()\n",
     "\n",
     "# add a grid\n",
-    "plt.grid()\n"
+    "plt.grid()"
    ]
   },
   {
@@ -613,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 15))\n",
+    "plt.figure(figsize=(12, 11))\n",
     "\n",
     "plt.subplot(2, 2, 1)\n",
     "iris_scatter(d, x = \"SepalLength\", y = \"SepalWidth\")\n",
@@ -639,7 +770,15 @@
    "outputs": [],
    "source": [
     "colnames = d.columns[1:5]\n",
-    "\n",
+    "colnames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n = 1\n",
     "plt.figure(figsize=(25, 25))\n",
     "for i in range(4):\n",
@@ -653,9 +792,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The figure gives an overview over all combination of the characteristics and shows which can be best used for separating the flowers of different species.\n",
+    "The figure gives an overview over all combination of the characteristics and shows which can be best used for separating the flowers of different species. Next part of the course explains how to make such separation meanwhile let's do some exercises.\n",
     "\n",
-    "Now let's learn how to make the separation."
+    "\n",
+    "### Exercise 3\n",
+    "\n",
+    "Write a code that shows a bar plot four area of each EU country. Show the countries, which became a part of EU before 2000, using blue color, and the countries, which became a part of EU in 2000 or later, using green color."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a scatter plot which shows area of the countries as x-axis and population as y-axis. Do you see any trend? Why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here"
    ]
   },
   {
@@ -705,7 +872,7 @@
     "train_ind = d[\"Id\"] % 5 != 0\n",
     "test_ind = d[\"Id\"] % 5 == 0\n",
     "\n",
-    "(test_ind[0:10], train_ind[0:10])\n"
+    "(test_ind[0:10], train_ind[0:10])"
    ]
   },
   {
@@ -848,6 +1015,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test how it works for different rows\n",
+    "r = d_train.iloc[101]\n",
+    "res = is_virginica(r)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and here how we can turn the True/False values to labels\n",
+    "(\"virginica\" if is_virginica(r) else \"non-virginica\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -869,6 +1058,7 @@
     "    for index, flower in d.iterrows():\n",
     "        class_label = \"virginica\" if is_virginica(flower, threshold) else \"non-virginica\"\n",
     "        predictions.append(class_label)\n",
+    "\n",
     "    return predictions"
    ]
   },
@@ -1026,6 +1216,16 @@
    "source": [
     "If the number of strangers and members in test set are equal, then the accuracy will be just an average of sensitivity and specificity like in our case.\n",
     "\n",
+    "### Exercise\n",
+    "\n",
+    "Imagine that we trained a model to distinguish red apples from the others. Below you see the result of applying the model to the test set.\n",
+    "\n",
+    "<img src=\"illustrations/apples-classification.png\" style=\"width: 700px;\">\n",
+    "\n",
+    "Compute number of TP, TN, FP, FN and use these numbers to compute sensitivity, specificity and accuracy of the classification results. Do it with manually without programming and report the results.\n",
+    "\n",
+    "### Classification quality (continue)\n",
+    "\n",
     "Let's combine all code together into a Python function, which will compute all statistics based on data frame with classification results. It will assume that the data frame has two columns, the first column contains reference class label and the second column contains the predicted labels.\n",
     "\n",
     "The function will work for any target class provided as an argument:"
@@ -1085,6 +1285,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now let's see how using different threshold values influence the classification quality. The code below is similar to what we used before, but just written in a more compact way. Try different threshold values and see how well they perform for the test set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 1.70\n",
+    "\n",
+    "pred = df_isvirginica(d_test, threshold)\n",
+    "ref = d_test[\"Species\"]\n",
+    "res = pd.DataFrame({\"Reference\": ref, \"Prediction\": pred})\n",
+    "test_stat = class_stat(res, \"virginica\")\n",
+    "test_stat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try the same for the training set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 1.70\n",
+    "\n",
+    "pred = df_isvirginica(d_train, threshold)\n",
+    "ref = d_train[\"Species\"]\n",
+    "res = pd.DataFrame({\"Reference\": ref, \"Prediction\": pred})\n",
+    "train_stat = class_stat(res, \"virginica\")\n",
+    "train_stat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Receiver operating characteristic\n",
+    "\n",
     "Finally let's do the following. Let's try to change the threshold and see how it influences the sensitivity, specificity and accuracy. Let's start with 1.0 and then try all threshold values up to 2.0 with a step of 0.1 so we will have 11 results in total: "
    ]
   },
@@ -1099,12 +1345,24 @@
     "\n",
     "# generate a sequence of 11 numbers between 1.0 and 2.0\n",
     "thresholds = np.linspace(1.0, 2.0, 11)\n",
-    "\n",
+    "thresholds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare empty lists to save main statistics for each thresholds\n",
     "sens = []\n",
     "spec = []\n",
     "acc = []\n",
     "\n",
+    "# save reference values into separate variable\n",
     "ref = d_test[\"Species\"]\n",
+    "\n",
+    "# apply different threshold values and save the results to the lists\n",
     "for t in thresholds:\n",
     "    pred = df_isvirginica(d_test, threshold = t)\n",
     "    res = pd.DataFrame({\"Reference\": ref, \"Prediction\": pred})\n",
@@ -1114,6 +1372,7 @@
     "    sens.append(stat[\"sens\"])\n",
     "    acc.append(stat[\"acc\"])\n",
     "\n",
+    "# show the result\n",
     "(spec, sens, acc)"
    ]
   },
@@ -1172,15 +1431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This plot is called *Receiver operating characteristic* (ROC) plot. The closer the curve is to the top right corner the better the model. However to make this plot complete we need to use a wider range of the threshold values, so both statistics go from 0 to 1. Try to implement this.\n",
-    "\n",
-    "### Exercise\n",
-    "\n",
-    "Imagine that we trained a model to distinguish red apples from the green ones. Below you see the result of applying the model to the test set.\n",
-    "\n",
-    "<img src=\"illustrations/apples-classification.png\" style=\"width: 700px;\">\n",
-    "\n",
-    "Compute number of TP, TN, FP, FN and use these numbers to compute sensitivity, specificity and accuracy of these results. Do it with manually without programming and report the results."
+    "This plot is called *Receiver operating characteristic* (ROC) plot. The closer the curve is to the top right corner the better the model. However to make this plot complete we need to use a wider range of the threshold values, so both statistics go from 0 to 1. Try to implement this."
    ]
   },
   {
@@ -1213,6 +1464,12 @@
    "metadata": {},
    "source": [
     "Apparently we can use the petal measurements for discrimination. Setosa can be clearly discriminated by using threshold along Petal Length, using for example a threshold of 2.5. We already have a solution for *virginica* (we will use the same threshold of 1.7). And then if none of the two conditions are satisfied the flower will be recognized as versicolor.\n",
+    "\n",
+    "Schematically it can be shown as a following flowchart:\n",
+    "\n",
+    "<img src=\"illustrations/tree.png\" style=\"width:600px\">\n",
+    "\n",
+    "Such models based on a set of nested thresholds are called [Decision Trees](https://en.wikipedia.org/wiki/Decision_tree). \n",
     "\n",
     "Let's implement it as the following function for a single row from the data frame:"
    ]
@@ -1294,7 +1551,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is it. In the next class we will talk about how to create a model, which will self define the classification rule by learning from the data."
+    "This is it. In the next class we will talk about how to create a model, which will self define the classification rule by learning from the data.\n",
+    "\n",
+    "### Exercise\n",
+    "\n",
+    "Implement decision tree which will use three conditions instead of two. Make a drawing first and then implement it on Python and test. Discuss cons and pros if this solutuion."
    ]
   }
  ],
@@ -1314,7 +1575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
