improvements to class 3

--- a/3. Artificial neural networks/en.ipynb
+++ b/3. Artificial neural networks/en.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install torch torchinfo"
+    "#! pip install torch torchinfo"
    ]
   },
   {
@@ -326,6 +326,15 @@
    "source": [
     "# convert output to numpy array (transpose -> detach from model -> convert to NumPy array)\n",
     "y_hat_arr = y_hat.t().detach().numpy()\n",
+    "y_hat_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# combine with reference values\n",
     "res = pd.DataFrame({\n",
@@ -364,7 +373,7 @@
     "\n",
     "# compare the labels with target class then multiply the result to 2 and subtract 1\n",
     "# if the result is False, it will be treated as 0: 0 * 2 - 1 = -1\n",
-    "# if the result is True, it will be trated as 1: 1 * 2 - 1 = 1\n",
+    "# if the result is True, it will be treated as 1: 1 * 2 - 1 = 1\n",
     "y_dummy = (c == \"virginica\") * 2 - 1\n",
     "y_dummy"
    ]
@@ -467,6 +476,35 @@
     "You do not need to know all of them, just remember that the loss function shows you (and to your model) how big the difference is between the desired output and the ones you model computes now. \n",
     "\n",
     "Moreover it tells model how to compute gradients — set of steps which let ANN to change the weights in order to make the loss smaller. This process of reducing the loss by gradual updating weights is called *[gradient descent](https://www.ibm.com/topics/gradient-descent)* and this is the main way to train any ANN model. Now we can discuss the training in detail.\n",
+    "\n",
+    "### Exercise 1\n",
+    "\n",
+    "Fill in the following two tables (you can do it in e.g. Excel or manually on a paper), compute MSE for each and comment how well MSE describes the classification results:\n",
+    "\n",
+    "\n",
+    "*Case 1*\n",
+    "\n",
+    "| $y$ | $\\hat{y}$ | $(y - \\hat{y})$ | $(y - \\hat{y})^2$ |\n",
+    "| --:| ---------:| ---------------:| -----------------:|\n",
+    "| -1 | 0.2 | - | - |\n",
+    "| -1 | 0.4 | - | - |\n",
+    "|  1 | -0.2 | - | - |\n",
+    "|  1 | -0.4 | - | - |\n",
+    "\n",
+    "*Case 2*\n",
+    "\n",
+    "| $y$ | $\\hat{y}$ | $(y - \\hat{y})$ | $(y - \\hat{y})^2$ |\n",
+    "| --:| ---------:| ---------------:| -----------------:|\n",
+    "|  1 | 0.2 | - | - |\n",
+    "|  1 | 0.4 | - | - |\n",
+    "| -1 | -0.2 | - | - |\n",
+    "| -1 | -0.4 | - | - |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Training ANN model\n",
     "\n",
@@ -702,7 +740,7 @@
    "source": [
     "For the test set it works even better (perhaps because the test set is smaller).\n",
     "\n",
-    "### Exercise\n",
+    "### Exercise 2\n",
     "\n",
     "Now play a bit with this code. Try to remove `torch.manual_seed()` instruction and run training several times. Try to increase the number of epochs and see how it influences the quality of classification both for training set and test set. Try to change the learning rate (make it smaller or larger). Get the best possible model and report the results."
    ]
@@ -1229,7 +1267,9 @@
     "def train(model, X_train, labels_train, X_val, labels_val, nepochs = 100, lr = 0.01):\n",
     "    \"\"\" trains any classification model using provided data, number of epochs and learning rate \"\"\"\n",
     "\n",
+    "    loss_function = nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
     "    for epoch in range(nepochs):\n",
     "        model.train()\n",
     "        optimizer.zero_grad()\n",
@@ -1244,17 +1284,29 @@
     "        loss = loss_function(labels_predicted, labels_val)\n",
     "        val_loss = loss.item()\n",
     "\n",
-    "        print(f'Epoch {epoch}, train loss: {train_loss:.4f} - validation loss {val_loss:.4f}')\n",
-    "\n",
-    "\n",
+    "        print(f'Epoch {epoch}, train loss: {train_loss:.4f} - validation loss {val_loss:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict(model, X):\n",
     "    \"\"\" get ANN model and tensor with predictors and returns predicted class label indices \"\"\"\n",
     "    model.eval()\n",
     "    output = model.forward(X)\n",
     "    _, labels = torch.max(output, 1)\n",
-    "    return labels\n",
-    "\n",
-    "\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def table(reference, predicted):\n",
     "    \"\"\" computes contingency table for predicted and reference class label indices \"\"\"\n",
     "    indices = reference.unique()\n",
@@ -1265,9 +1317,15 @@
     "        for j in range(n):\n",
     "            ct[i, j] = sum((reference == indices[i]) & (predicted == indices[j])) / ni\n",
     "\n",
-    "    return ct\n",
-    "\n",
-    "\n",
+    "    return ct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def ct_heatmap(ct, classes):\n",
     "    \"\"\" shows heatmap for the contingency table \"\"\"\n",
     "    plt.imshow(ct, clim = [0, 1])\n",
@@ -1323,9 +1381,11 @@
     "ct_test = table(labels_test, predictions_test)\n",
     "\n",
     "plt.figure(figsize = (10, 5))\n",
+    "\n",
     "plt.subplot(1, 2, 1)\n",
     "ct_heatmap(ct_train, classes)\n",
     "plt.title(\"Train\")\n",
+    "\n",
     "plt.subplot(1, 2, 2)\n",
     "ct_heatmap(ct_test, classes)\n",
     "plt.title(\"Test\")"
@@ -1335,7 +1395,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With 1000 epochs, smaller learning rate the new architecture works almost perfectly!"
+    "With 1000 epochs, smaller learning rate the new architecture works almost perfectly!\n",
+    "\n",
+    "### Exercise 3\n",
+    "\n",
+    "In file `IrisHeatmap.csv` you will find new data points which contain new measurements but do not have column with species nor column with IDs (so it has only four columns with measurements). Load the data from the file and then apply the ANN you have just trained to get the predictions.\n",
+    "\n",
+    "After that make a scatter plot, where x- and y-values are Petal Length and Petal Width you got from the file. Show points, predicted as *setosa* using red color, points, predicted as *versicolor* as green and points, predicted as *virginica* as blue. Comment the plot. What it actually shows? \n",
+    "\n",
+    "Try to add predictions for training and test set to the plot. In this case you will need to make the predictions for new data shown semi-transparent. Use parameter `alpha = 0.15` in the `plt.scatter()` function for that.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# place your code here"
    ]
   },
   {
@@ -1421,7 +1498,7 @@
    "source": [
     "As you can see, after approximately 3000 epochs the validation almost loss does not change. So there is no reason to run the model that far.\n",
     "\n",
-    "Let's re-initialize the model (this is needed to set all initial weights to random numbers otherwise weights for already trained model will be used as starting point) and train it again, but this time we will use a small learning rate:"
+    "Let's re-initialize the model (this is needed to set all initial weights to random numbers otherwise weights for already trained model will be used as starting point) and train it again, but this time we will use a large learning rate:"
    ]
   },
   {
@@ -1684,7 +1761,31 @@
    "source": [
     "It works!\n",
     "\n",
-    "Now you know everything you need to know for the next class."
+    "### Exercise \n",
+    "\n",
+    "To make this exercise you need to work in pairs. One of the member should train ANN network on Iris data (make a separate notebook and copy all needed code there). Train it using random initialization and try different hyperparameters (number of epochs, learning rate, etc.). When you get a good model save it to a file and send it to your group mate by email. The task of the group mate is to load the model and apply it to the test set.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# place your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Play with interactive ANN in web\n",
+    "\n",
+    "Now you know everything you need to know for the next class. However we recommend you to play a bit more using this interactive ANN constructor which you can run directly in your web-browser. Spend some time and play with different problems, different architectures and hyperparameters:\n",
+    "\n",
+    "[TensorFlow playground](http://playground.tensorflow.org)"
    ]
   }
  ],
@@ -1704,7 +1805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
