improvements to content of notebooks and course materials

--- a/3. Artificial neural networks/en.ipynb
+++ b/3. Artificial neural networks/en.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install torch torchinfo"
+    "! pip install torch torchinfo"
    ]
   },
   {
@@ -306,7 +306,7 @@
     "y_hat = model(X_test)\n",
     "\n",
     "# show the results\n",
-    "y_hat"
+    "y_hat > 0"
    ]
   },
   {
@@ -505,6 +505,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Gradients and optimization \n",
+    "\n",
+    "Loss function is used not only for assessing the quality of the predicted values, but also for computing gradients for the weights — how the weights must be changed in order to get a smaller loss at the next iteration (improve the model). \n",
+    "\n",
+    "The gradients are increments for the weights, $\\Delta w_1, \\Delta w_2, \\Delta w_3, \\Delta w_4$ and for the bias, $\\Delta b$, which are used to compute new weights for the model. The simplest way to compute the new weights is the following:\n",
+    "\n",
+    "\n",
+    "$w_1 = w_1 - \\alpha \\Delta w_1$<br>\n",
+    "$w_2 = w_2 - \\alpha \\Delta w_2$<br>\n",
+    "$w_3 = w_3 - \\alpha \\Delta w_3$<br>\n",
+    "$w_4 = w_4 - \\alpha \\Delta w_4$<br>\n",
+    "$bias = bias - \\alpha \\Delta b$\n",
+    "\n",
+    "As you can see above, the increments are not used as is, but there is an additional parameter $\\alpha$, which must be between 0 and 1. For example, if $\\alpha = 0.01$, the change in weights  will be 1% of the computed increment.\n",
+    "\n",
+    "The parameter $\\alpha$ is called a *learning rate* and it is needed to slow down the learning process and make it more smooth. You will see some examples later in this class.\n",
+    "\n",
+    "The gradients are computed by the loss function object (in example above it is `nn.MSELoss()`), while updating the weights is done by another function — *optimizer*. There are several optimizers available, usually one of the following two is a good choice:\n",
+    "\n",
+    "* *GD* or *SGD* (stochastic gradient descent) — the simplest optimizer, which works exactly like shown in the equations above. Simple and straightforward. The name *gradient descent* means that you compute gradient in order to find steps for the weights which let go down (descent) in the loss.\n",
+    "* *Adam* is more sophisticated optimizer which updates weights in a bit more complex way than as shown above. It has more parameters to tune and usually is more efficient.\n",
+    "\n",
+    "In all examples we will use *SGD* as it is more simple, but you can try *Adam* later. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Training ANN model\n",
     "\n",
@@ -512,7 +541,7 @@
     "\n",
     "1. Apply ANN to compute outputs based on inputs from the training set.\n",
     "2. Compute loss based on the current output and the desired output values.\n",
-    "3. Compute gradients, which tell how to change weights so next time loss is smaller.\n",
+    "3. Compute gradients and update weights, so next time the loss value is smaller.\n",
     "\n",
     "The first step is called *forward propagation* because data values flow from the left (inputs) to the right (outputs) through all neurons in between (we have only one neuron so far in our model, but it does not matter — what works for one will work for thousands). \n",
     "\n",
@@ -584,7 +613,7 @@
     "\n",
     "# fix the state of random numbers generator\n",
     "seed = 11\n",
-    "torch.manual_seed(seed)\n",
+    "#torch.manual_seed(seed)\n",
     "\n",
     "# initialize a new model\n",
     "model = SimpleModel()\n",
@@ -843,7 +872,7 @@
     "    test_loss = loss_function(y_hat_test, y_test)\n",
     "\n",
     "    # show how big the loss is\n",
-    "    print(f'Epoch {epoch}, train oss: {train_loss.item():.4f} - test loss {test_loss.item():.4f}')"
+    "    print(f'Epoch {epoch}, train loss: {train_loss.item():.4f} - test loss {test_loss.item():.4f}')"
    ]
   },
   {
@@ -1092,7 +1121,9 @@
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    labels_predicted = model(X_train)\n",
+    "\n",
     "    loss = loss_function(labels_predicted, labels_train)\n",
+    "\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    train_loss = loss.item()\n",
@@ -1173,6 +1204,7 @@
     "# compute contingency table for training and test set\n",
     "ct_train = np.zeros((3, 3))\n",
     "ct_test = np.zeros((3, 3))\n",
+    "\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        ct_train[i, j] = sum((labels_train == i) & (predictions_train == j))\n",
@@ -1206,7 +1238,7 @@
     "        ct_train[i, j] = sum((labels_train == i) & (predictions_train == j)) / n_train\n",
     "        ct_test[i, j] = sum((labels_test == i) & (predictions_test == j)) / n_test\n",
     "\n",
-    "(ct_train, ct_test)\n"
+    "(ct_train, ct_test)"
    ]
   },
   {
@@ -1407,15 +1439,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# place your code here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1444,6 +1467,7 @@
     "        loss = loss_function(labels_predicted, labels_train)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "\n",
     "        train_losses[epoch] = loss.item()\n",
     "\n",
     "        model.eval()\n",
@@ -1489,7 +1513,8 @@
     "plt.plot(val_losses, label = \"val\")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Epochs\")\n",
-    "plt.ylabel(\"Loss\")"
+    "plt.ylabel(\"Loss\")\n",
+    "plt.ylim([0, 0.2])"
    ]
   },
   {
@@ -1550,6 +1575,15 @@
     "2. Save the model to a file for later use. For example you can send it to your classmates or colleagues. Or simply save it in order to continue training process tomorrow. Or to re-use it for predictions. Many possibilities.\n",
     "\n",
     "Let's see first how to get the state of the model. Try to run the next code first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.parameters()"
    ]
   },
   {
