--- a/4. ANN for image classification/en.ipynb
+++ b/4. ANN for image classification/en.ipynb
@@ -420,6 +420,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img_indices = range(0, 4000, 200)\n",
+    "list(img_indices)\n",
+    "list(range(len(img_indices)))\n",
+    "\n",
+    "img_indices[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -428,13 +441,15 @@
     "img_indices = range(0, 4000, 200)\n",
     "\n",
     "plt.figure(figsize = (10, 8))\n",
+    "\n",
     "for i in range(len(img_indices)):\n",
     "    path, class_ind = dataset.samples[img_indices[i]]\n",
     "    img = Image.open(path)\n",
+    "\n",
     "    plt.subplot(4, 5, i + 1)\n",
-    "    plt.imshow(np.asarray(img))\n",
+    "    plt.imshow(np.array(img))\n",
     "    plt.axis('off')\n",
-    "    plt.title(dataset.classes[class_ind])"
+    "    plt.title(dataset.classes[class_ind])\n"
    ]
   },
   {
@@ -456,6 +471,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nall = len(dataset)\n",
+    "ntrain = int(nall * 0.20)\n",
+    "ntrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from torch.utils.data import random_split\n",
     "\n",
     "nall = len(dataset)\n",
@@ -467,7 +493,7 @@
     "\n",
     "# we need a seed here as well because of random splits\n",
     "torch.manual_seed(12)\n",
-    "[train_set, val_set, test_set, rest_set] = random_split(dataset, (ntrain, nval, ntest, nrest))"
+    "[train_set, val_set, test_set, rest_set] = random_split(dataset, (ntrain, nval, ntest, nrest))\n"
    ]
   },
   {
@@ -713,7 +739,8 @@
     "    # HINT: here you need to initialize two variables\n",
     "    # - one will keep the best validation loss value\n",
     "    # - second one will keep the state dictionary of the model you got this loss for\n",
-    "\n",
+    "    best_model = None\n",
+    "    best_loss = 99999999999.0\n",
     "\n",
     "    # training loop\n",
     "    for epoch in range(nepochs):  # Number of training epochs\n",
@@ -749,10 +776,15 @@
     "        # best one you got so far. If the current model is better, you save its state as\n",
     "        # the new best. You also need to save the best loss value — this is the way to\n",
     "        # see if the next model will be even better\n",
+    "        if val_losses[epoch] < best_loss:\n",
+    "            best_model = deepcopy(model.state_dict())\n",
+    "            best_loss = val_losses[epoch]\n",
     "\n",
     "    # HINT:\n",
     "    # here you need to load the state of the best model from the loop\n",
     "    # to your model object\n",
+    "    model.load_state_dict(best_model)\n",
+    "\n",
     "    return train_losses, val_losses"
    ]
   },
@@ -977,7 +1009,7 @@
    "source": [
     "# connect to camera\n",
     "import cv2\n",
-    "camera = cv2.VideoCapture(0)\n",
+    "camera = cv2.VideoCapture(1)\n",
     "camera.isOpened()"
    ]
   },
@@ -1016,7 +1048,7 @@
    "outputs": [],
    "source": [
     "# left top right bottom\n",
-    "crop_rect = [850, 400, 1320, 1100]\n",
+    "crop_rect = [650, 0, 1450, 1100]\n",
     "img = Image.fromarray(frame)\n",
     "img_cropped = img.crop(crop_rect)\n",
     "display(img_cropped)"
@@ -1036,7 +1068,7 @@
    "outputs": [],
    "source": [
     "img_transformed = transform(img_cropped)\n",
-    "img_transformed = img_transformed.reshape(1, 3, img_width, img_height)\n",
+    "img_transformed = img_transformed.reshape(1, 3, 224, 224)\n",
     "output = model.forward(img_transformed)\n",
     "\n",
     "# compute label\n",
@@ -1072,6 +1104,15 @@
    "outputs": [],
    "source": [
     "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.device(\"cuda\")"
    ]
   },
   {
@@ -1378,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
